--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: 'Roboto Condensed', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  line-height: 1.5;
+  color: #495e57;
+}
+
+button {
+  color: #495e57;
+  background-color: #f4ce14;
+  border: 0;
+  padding: 1rem 1rem;
+  border-radius: 2rem;
+  font-weight: 600;
+  font-size: large;
+  cursor: pointer;
+}
+
+button:hover {
+  color: black;
+}
+
+button:active {
+  color: white;
+}
+
+.flex {
+  display: flex;
+}
+
+.green-container {
+  background-color: #495e57;
+  color: white;
+}
+
+.green-container h1 {
+  color: #c3a510;
+}
+
+.confirmed-booking {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  min-height: 31.25rem;
+  padding: 1.875rem 0 1.875rem 0;
+  text-align: center;
+}
+
+img {
+  max-width: 100%;
 }
